--- a/overmij.html
+++ b/overmij.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title> Sanne van Zeijl </title>
-    <link type="text/css" href="style/main.css" rel="stylesheet" />
+    <link type="text/css" href="style/overmij.css" rel="stylesheet" />
   </head>
  
   <body>
@@ -12,40 +12,25 @@
 
       <div class="grid-item box-1">
         <div> 
-          <h1 id="name"> Sanne </h1> 
-        </div>
-        <div>
-          <h1 id="overlay"> Sanne </h1>
-        </div>
-        <div>
-          <h1 id="studie"> Communicatie en multimedia design </h1>
-        </div>
-        <div>
-          <h1 id="birth"> 1998 </h1>
+          <h1 id="name"> Over mij </h1> 
         </div>
       </div>
 
       <div class="grid-item box-2">
 
-        <a class="nav" href="url">Over Mij</a>
 
       </div>
 
       <div class="grid-item box-3">
 
-        <a class="nav" href="url">Projecten</a>
-
       </div>
 
       <div class="grid-item box-4">
-
-        <a class="nav" href="url">Fotografie</a>
 
       </div>
 
       <div class="grid-item box-5">
 
-        <a class="nav" href="url">Contact</a>
       
       </div>
 
