breadcrumbs en titels

--- a/labweeks.html
+++ b/labweeks.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl </title>
+    <title> Sanne van Zeijl / Lab Weeks</title>
     <link type="text/css" href="style/excursion.css" rel="stylesheet" />
   </head>
  
