--- a/topics.html
+++ b/topics.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl </title>
+    <title> Sanne van Zeijl / Topics </title>
     <link type="text/css" href="style/topics.css" rel="stylesheet" />
   </head>
  
