--- a/wearables.html
+++ b/wearables.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl </title>
+    <title> Sanne van Zeijl / Wearables </title>
     <link type="text/css" href="style/wearables.css" rel="stylesheet" />
   </head>
  
