--- a/playful.html
+++ b/playful.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl </title>
+    <title> Sanne van Zeijl / Playful</title>
     <link type="text/css" href="style/playful.css" rel="stylesheet" />
   </head>
  
