--- a/vr.html
+++ b/vr.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Arduino </title>
+    <title> Sanne van Zeijl / Arduino </title>
     <link type="text/css" href="style/vr.css" rel="stylesheet" />
   </head>
  
