--- a/artificial.html
+++ b/artificial.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title> Sanne van Zeijl / Artificial </title>
-    <link type="text/css" href="style/ar.css" rel="stylesheet" />
+    <link type="text/css" href="style/artificial.css" rel="stylesheet" />
   </head>
  
   <body>
