--- a/ar.html
+++ b/ar.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl </title>
+    <title> Sanne van Zeijl / AR&VR</title>
     <link type="text/css" href="style/ar.css" rel="stylesheet" />
   </head>
  
