--- a/artificial.html
+++ b/artificial.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl / Artificial </title>
+    <title> Sanne van Zeijl / Artificial Creatures </title>
     <link type="text/css" href="style/artificial.css" rel="stylesheet" />
   </head>
  
