--- a/workshop.html
+++ b/workshop.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Sanne van Zeijl / Topics </title>
+    <title> Sanne van Zeijl / Workshops </title>
     <link type="text/css" href="style/workshops.css" rel="stylesheet" />
   </head>
  
