--- a/computer.html
+++ b/computer.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title> Arduino </title>
+    <title> Sanne van Zeijl / Computer Vision </title>
     <link type="text/css" href="style/computer.css" rel="stylesheet" />
   </head>
  
