--- a/arduino.html
+++ b/arduino.html
@@ -47,7 +47,7 @@
             <div>
               <img id="code" src="img/3C.png">
               <video width="auto" height="450" controls muted autoplay="autoplay">
-              <source src="vid/3c.mp4" type="video/mp4" /> 
+              <source src="vid/3C.mp4" type="video/mp4" /> 
               </video>
             </div>
        </div>
@@ -62,7 +62,7 @@
             </div>
             <div>
               <img id="code" src="img/4C.png">
-              <video width="auto" height="450" controls muted autoplay="autoplay" src="vid/4c.mp4" type="video/mp4"> 
+              <video width="auto" height="450" controls muted autoplay="autoplay" src="vid/4C.mp4" type="video/mp4"> 
               </video>
             </div>
        </div>
