foto werkt niet

--- a/arduino.html
+++ b/arduino.html
@@ -75,7 +75,7 @@
              <p> In deze opdracht kregen we een potmeter waarmee we de opdracht moesten uitvoeren. Een potmeter is een klein ding waar je aan kan draaien. De opdracht was dat wanneer je aan de potmeter draait de eene led langzaam aangaat, terwijl de andere led langzaam uitgaat. In de code hebben we een map toegevoegd. Die ervoor zorgt dat de waarde van het licht van 0 naar 1024 naar 0 naar 255 gaat. Om ze niet beide hetzelfde te laten doen hebben we de code bij de groene led aangepast dat de waarde van het licht de sensor value van de 255 af haalt. Op de manier veranderen ze niet tegelijk wanneer er aan de potmeter gedraaid wordt.</p>
             </div>
             <div>
-              <img id="code" src="img/6C.png">
+              <img id="code" src="img/6c.png">
               <video width="auto" height="450" controls muted autoplay="autoplay" src="vid/6c.mp4" type="video/mp4">
               </video>
             </div>
