--- a/vr.html
+++ b/vr.html
@@ -103,8 +103,8 @@
             Als laats hebben we met andere soorten vormen nog geprobeerd te werken, zoals de discobal en op alle vlakken wouden we dan wat ander projecteren. Dit kon uiteindelijk niet verder uitgevoerd worden omdat de les voorbij was. 
           </p> 
         <div> 
-          <video id="sixpack" width="auto" height="450" controls muted autoplay="autoplay" src="vid/sixpack.mp4" type="video/mp4">
-          </video>
+          <!-- <video id="sixpack" width="auto" height="450" controls muted autoplay="autoplay" src="vid/sixpack.mp4" type="video/mp4">
+          </video> -->
           <video id="praten" width="auto" height="450" controls muted autoplay="autoplay" src="vid/praten.mp4" type="video/mp4">
           </video>
           <video id="kaars" width="auto" height="450" controls muted autoplay="autoplay" src="vid/kaars.mp4" type="video/mp4">
