--- a/labweeks.html
+++ b/labweeks.html
@@ -159,9 +159,11 @@
              	Ik ben heel trots op hoe we dit samen hebben gedaan. Naar mijn idee heeft iedereen in de groep zijn steentje bij gedragen. De eerste dag kwamen we erachter dat niemand echt goed was in programmeren, iedereen heeft zichzelf uitgedaagd en we hebben iets heel moois neergezet. Voordat we begonnen zag ik er een beetje tegen op en de eerste twee dagen vond ik niet leuk. Maar wanneer we eenmaal een doel hadden en hier naar toe werkte vond ik het heel leuk. 
              </p>
 
-             <!-- <iframe width="1100" height="500"
-			src="https://www.youtube.com/embed/tgbNymZ7vqY">
-			</iframe> -->
+             <iframe width="1100" height="500"
+			src="https://www.youtube.com/embed/SM9PbCIQyJ0">
+			</iframe>
+
+			<p> Werkt de video niet? Klik dan <a href="https://www.youtube.com/watch?v=SM9PbCIQyJ0&t">HIER</a>. 
             </div>
        </div>
 
