--- a/labweeks.html
+++ b/labweeks.html
@@ -163,7 +163,7 @@
 			src="https://www.youtube.com/embed/SM9PbCIQyJ0">
 			</iframe>
 
-			<p> Werkt de video niet? Klik dan <a href="https://www.youtube.com/watch?v=SM9PbCIQyJ0&t">HIER</a>. 
+			<p> Werkt de video niet? Klik dan <a href="https://www.youtube.com/watch?v=SM9PbCIQyJ0&t">HIER!!!</a>. 
             </div>
        </div>
 
